# KubeLaunch

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/ai-demo/: README.md
apps/ai-demo/backend/: Dockerfile  README.md  requirements.txt
apps/ai-demo/frontend/: Dockerfile  README.md  nginx-main.conf  nginx.conf
apps/aiworkload-operator/: Dockerfile  README.md  requirements.txt
apps/aiworkload-operator/k8s/: cluster-role-binding.yaml  cluster-role.yaml  crd.yaml  deployment.yaml  kustomization.yaml  service-account.yaml
apps/aiworkload-operator/operator_app/: __init__.py  main.py  workload.py
apps/aiworkload-smoke-test/: README.md  aiworkload.yaml  kustomization.yaml
apps/cert-manager-smoke-test/: README.md  certificate.yaml  cluster-issuer.yaml
apps/external-secrets-smoke-test/: README.md  external-secret.yaml  secret-store.yaml
apps/keda-smoke-test/: README.md  deployment.yaml  scaled-object.yaml  service.yaml
apps/ollama/: README.md  deployment.yaml  kustomization.yaml  model-pull-job.yaml  persistent-volume-claim.yaml  service.yaml
apps/platform-smoke-test/: README.md  deployment.yaml  service.yaml
apps/vault-bootstrap/: README.md  bootstrap-job.yaml  kustomization.yaml  token-secret.yaml
cli/: README.md
cli/kube_launch/: __init__.py  __main__.py  argocd.py  cluster.py  main.py  prerequisites.py
cli/tests/: test_argocd.py  test_cli.py  test_cluster.py  test_platform_manifests.py
docs/: README.md
platform/: README.md  root-application.yaml
platform/components/: README.md  ai-demo-backend-application.yaml  ai-demo-frontend-application.yaml  keda-application.yaml  keda-smoke-test-application.yaml  observability-application.yaml  ollama-application.yaml  smoke-test-application.yaml
profiles/full/: README.md  root-application.yaml
scripts/: README.md  validate_manifests.py
(+22 files in other folders)
