[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "kube-launch"
version = "0.1.0"
description = "Bootstrap a local GitOps-native Kubernetes platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
    "ruff>=0.9,<1.0",
]

[project.scripts]
kube-launch = "kube_launch.main:app"

[tool.setuptools]
package-dir = {"" = "cli"}

[tool.setuptools.packages.find]
where = ["cli"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["cli"]
testpaths = ["cli/tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
