[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "kube-launch"
version = "0.1.0"
description = "Bootstrap a local GitOps-native Kubernetes platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12,<1.0",
]

[project.optional-dependencies]
backend = [
    "fastapi>=0.115,<1.0",
    "httpx>=0.28,<1.0",
    "prometheus-client>=0.21,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
]
dev = [
    "pytest>=8,<10",
    "PyYAML>=6,<7",
    "ruff>=0.9,<1.0",
]

[project.scripts]
kube-launch = "kube_launch.main:app"

[tool.setuptools]
package-dir = {"" = "cli"}

[tool.setuptools.packages.find]
where = ["cli"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["cli", "apps/ai-demo/backend", "apps/aiworkload-operator"]
testpaths = [
    "cli/tests",
    "apps/ai-demo/backend/tests",
    "apps/aiworkload-operator/tests",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
